# yog

./: Cargo.toml
doc/: list  list~  yog.odt
pages/: index.html
pages/assets/: back.html  back.html~
src/: main.rs  main.rs~
src/pages/: index.html
